repo-syncs/onlineboutique/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    mesh.cloud.google.com/proxy: '{"managed": true}'
  labels:
    name: onlineboutique
    istio-injection: enabled
  name: onlineboutique
