repo-syncs/onlineboutique/network-policy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: onlineboutique
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
